deploy: d96dd1793a0e4a7cb8e2cde0fdc7b84e03dce94f

--- a/getting-started/installation/index.html
+++ b/getting-started/installation/index.html
@@ -1311,9 +1311,8 @@
 <p>Before installing ARI, ensure you have the following prerequisites:</p>
 <ul>
 <li><strong>PowerShell Version</strong>:</li>
-<li>PowerShell 7.0 or newer (recommended)</li>
 <li>
-<p>PowerShell 5.1 (minimum requirement)</p>
+<p>PowerShell 7.0 or newer (Required)</p>
 </li>
 <li>
 <p><strong>Azure Account</strong>:</p>
